--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ astropy>=3.0
 scipy
 emcee
 mpmath
+matplotlib
 -e git://github.com/sibirrer/lenstronomy.git@master#egg=lenstronomy
 scikit-learn>=0.22
