--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,8 @@ emcee
 mpmath
 h5py
 matplotlib
--e git://github.com/sibirrer/lenstronomy.git@main#egg=lenstronomy
+-e git://github.com/sibirrer/lenstronomy.git@main#egg=lenstronomy -r requirements.txt
 scikit-learn>=0.22
+
+# only through lenstronomy
+#scikit-image
