--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ emcee
 mpmath
 h5py
 matplotlib
--e git://github.com/sibirrer/lenstronomy.git@main#egg=lenstronomy -r requirements.txt
+-e git://github.com/sibirrer/lenstronomy.git@main#egg=lenstronomy
 scikit-learn>=0.22
 
-# only through lenstronomy
-#scikit-image
+# only required through lenstronomy
+scikit-image
