--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -37,16 +37,17 @@ jobs:
       #    flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
       #    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
-        run: |
-          pytest --cov=hierarc
+      -   name: Test with pytest
+          run: |
+              pytest --cov=./ --cov-report=xml
+              codecov
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        with:
-          files: ./coverage.xml
+      -   name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v3
+          env:
+              CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          with:
+              files: ./coverage.xml
 
 #      - name: Coveralls
 #        env:
