--- a/codecov.yml
+++ b/codecov.yml
@@ -6,4 +6,5 @@ comment:                  # this is a top-level key
   require_head: true       # [true :: must have a head report to post]
 ignore:
   - "setup.py"
-  - "test/*"
+  - "test/*.py"
+  - "test/**/*.py"
