--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ mpmath
 h5py
 matplotlib
 pandas
-lenstronomy @ git+https://github.com/lenstronomy/lenstronomy@main
+lenstronomy>=1.13.1
 scikit-learn>=0.22
 pandas
